--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -19,6 +19,7 @@ ul{
     width: 100vw;
     position: sticky;
     top: 0;
+    z-index: 10;
 
 }
 .logo{
@@ -37,6 +38,7 @@ ul{
     position: fixed;
     background: var(--fundo-escuro);
     overflow: hidden;
+    z-index: 10;
 }
 .menu a{
     display: block;
@@ -85,6 +87,7 @@ ul{
 }
 .side-menu:checked ~ nav{
     max-height: 100%;
+    z-index: 10;
 }
 
 .side-menu:checked ~ .hamb .hamb-line{
